trying to fix overflow issues x2

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,8 +12,7 @@ body{
     display: grid;
     grid-template-rows: min-content 100%;
     row-gap: 2rem;
-    min-height: 100vh;
-    height: 100%;
+    min-height: 100%;
 }
 
 .container{
